fixed left alignment issue when set to smaller image sizes

--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -30,9 +30,10 @@
     position: relative
 
     @media screen and (max-width: $break-small)
-      margin-right: 4%
+      margin-right: 8%
+      max-width: none
       text-align: center
-      width: 48%
+      width: 46%
 
       &:nth-child(2n+1)
         clear: left
